# samey

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bacon.toml  default.nix  docker-compose.yml  flake.nix  justfile  shell.nix
migration/: Cargo.toml
migration/src/: lib.rs  m20250405_000001_create_table.rs  main.rs
npins/: sources.json
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  query.rs  rating.rs  tags.rs  video.rs  views.rs
src/entities/: mod.rs  prelude.rs  samey_config.rs  samey_pool.rs  samey_pool_post.rs  samey_post.rs  samey_post_source.rs  samey_session.rs  samey_tag.rs  samey_tag_post.rs  samey_user.rs
static/: samey.css
templates/: add_post_to_pool.html  edit_post_details.html  get_full_media.html  get_image_media.html  get_video_media.html  index.html  pool.html  pool_posts.html  pools.html  post_details.html  post_source.html  posts.html  search_tags.html  select_tag.html  settings.html  submit_post_details.html  view_post.html
templates/fragments/: add_post_to_pool.html  age_restricted_check.html  change_pool_name.html  common_headers.html  edit_post_details.html  get_image_media.html  get_video_media.html  pool_posts.html  post_details.html  post_source.html  post_thumbnail.html  rss_entry.html  search_tags.html  select_tag.html  submit_post_details.html  tags_input.html
templates/pages/: bad_request.html  bulk_edit_tag.html  create_pool.html  forbidden.html  index.html  internal_server_error.html  login.html  not_found.html  pool.html  pools.html  posts.html  settings.html  unauthorized.html  upload.html  view_post.html
