[package]
name = "samey"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Bad Manners <me@badmanners.xyz>"]
readme = "README.md"

[workspace]
members = [".", "migration"]

[dependencies]
askama = "0.13.0"
axum = { version = "0.8.3", features = ["multipart", "macros"] }
axum-extra = { version = "0.10.1", features = ["form"] }
axum-login = "0.17.0"
chrono = "0.4.40"
futures-util = "0.3.31"
image = "0.25.6"
itertools = "0.14.0"
migration = { path = "migration" }
password-auth = "1.0.0"
rand = "0.9.0"
sea-orm = { version = "1.1.8", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
