[package]
name = "samey"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Bad Manners <me@badmanners.xyz>"]
readme = "README.md"

[workspace]
members = [".", "migration"]

[dependencies]
askama = { version = "0.13.0", features = ["serde_json"] }
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["multipart", "macros"] }
axum-extra = { version = "0.10.1", features = ["form"] }
axum-login = "0.17.0"
chrono = "0.4.40"
clap = "4.5.35"
futures-util = "0.3.31"
image = "0.25.6"
itertools = "0.14.0"
migration = { path = "migration" }
mime_guess = "2.0.5"
password-auth = "1.0.0"
pulldown-cmark = "0.13.0"
rand = "0.9.0"
rust-embed = { version = "8.7.0", features = ["axum", "debug-embed"] }
sea-orm = { version = "1.1.8", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tower-sessions = "0.14.0"

[profile.release]
strip = true
lto = true
